// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: has no list 1`] = `
<Select
  aria-labelledby="measures-view-selection-label"
  blurInputOnSelect={true}
  components={
    {
      "Option": [Function],
      "SingleValue": [Function],
    }
  }
  isSearchable={false}
  onChange={[Function]}
  options={
    [
      {
        "icon": <TreeIcon />,
        "label": "component_measures.tab.tree",
        "value": "tree",
      },
      {
        "icon": <TreemapIcon />,
        "label": "component_measures.tab.treemap",
        "value": "treemap",
      },
    ]
  }
/>
`;

exports[`should render correctly: has no tree 1`] = `
<Select
  aria-labelledby="measures-view-selection-label"
  blurInputOnSelect={true}
  components={
    {
      "Option": [Function],
      "SingleValue": [Function],
    }
  }
  isSearchable={false}
  onChange={[Function]}
  options={
    [
      {
        "icon": <ListIcon />,
        "label": "component_measures.tab.list",
        "value": "list",
      },
    ]
  }
  value={
    {
      "icon": <ListIcon />,
      "label": "component_measures.tab.list",
      "value": "list",
    }
  }
/>
`;

exports[`should render correctly: has no treemap 1`] = `
<Select
  aria-labelledby="measures-view-selection-label"
  blurInputOnSelect={true}
  components={
    {
      "Option": [Function],
      "SingleValue": [Function],
    }
  }
  isSearchable={false}
  onChange={[Function]}
  options={
    [
      {
        "icon": <TreeIcon />,
        "label": "component_measures.tab.tree",
        "value": "tree",
      },
      {
        "icon": <ListIcon />,
        "label": "component_measures.tab.list",
        "value": "list",
      },
      {
        "icon": <TreemapIcon />,
        "label": "component_measures.tab.treemap",
        "value": "treemap",
      },
    ]
  }
  value={
    {
      "icon": <ListIcon />,
      "label": "component_measures.tab.list",
      "value": "list",
    }
  }
/>
`;
